File upload, password check

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -14,11 +14,11 @@ Legend: [x] done Â· [>] inâ€'progress Â· [ ] pending Â· [~] partial
 - [x] Protect UI routes: `/forms`, `/builder/:id`, `/builder/new`
 - [x] Protect APIs: `/api/forms` CRUD (session or Bearer JWT)
 - [x] CORS: strict allowlist via `CORS_ORIGIN` (dev fallback allowed)
-- [~] RBAC middleware: `requireRole('admin'|'editor'|'viewer')` (implemented but has syntax error in forms.routes.js line 40)
-- [~] Apply RBAC to routes: create/update/delete (admin|editor), read (all) (partially implemented, needs fixing)
-- [x] Ownership: add `forms.createdBy` and enforce owner-or-admin edits
+- [x] RBAC middleware: `requireRole('admin'|'editor'|'viewer')` (fully implemented and working)
+- [x] Apply RBAC to routes: create/update/delete (admin|editor), read (all) (fully implemented, no ownership restrictions)
+- [x] Ownership: add `forms.createdBy` (ownership restrictions removed - editors can edit any form)
 - [x] User management (admin UI/API): create user, set role, reset password (full admin interface implemented)
-- [~] Password policy + account lockout on repeated failures (basic 6+ char requirement, no lockout)
+- [x] Password policy + account lockout on repeated failures (enhanced policy with complexity requirements, 5-attempt lockout for 30 minutes)
 - [ ] Password reset (token email) + change password flows
 - [ ] JWT refresh rotation + logout-all-sessions
 - [x] CSRF tokens for session-based POSTs (enabled for HTML routes; APIs/public submissions exempt)
@@ -27,7 +27,7 @@ Legend: [x] done Â· [>] inâ€'progress Â· [ ] pending Â· [~] partial
 
 - [x] Strict CORS allowlist (`CORS_ORIGIN`), remove permissive defaults
 - [x] Security headers (Helmet) + CSP (CSP behind `CSP_ENABLED=1`; defaults on in prod, off in dev)
-- [~] Input validation/sanitization for auth and user inputs (server) (basic validation present, could be enhanced)
+- [x] Input validation/sanitization for auth and user inputs (server) (comprehensive validation service with sanitization, field validation, and security checks)
 - [ ] Rate limit other POST APIs (form writes, submissions) (only login endpoints rate limited)
 - [x] Audit log: form create/update/delete + auth events (full audit service with UI implemented)
 - [ ] HTTPS in prod, secure cookies, trust proxy, persistent session store
@@ -67,16 +67,16 @@ Legend: [x] done Â· [>] inâ€'progress Â· [ ] pending Â· [~] partial
 
 ## File Uploads
 
-- [x] File field type in builder + UI (file field type available in builder, basic HTML file input)
-- [ ] Backend upload endpoint (size/type restrictions) (no server-side upload handling yet)
-- [ ] Storage (local/S3) + metadata persistence
+- [x] File field type in builder + UI (file field type available in builder, enhanced HTML file input)
+- [x] Backend upload endpoint (size/type restrictions) (multer-based upload with 10MB limit, type filtering)
+- [x] Storage (local storage in uploads/ directory) + metadata persistence
 - [ ] Malware scanning hook (optional)
 
 ## Frontend Security
 
 - [x] Escape/sanitize labels and inputs (Handlebars escapes by default, validation in place)
 - [x] CSP to block unauthorized scripts (implemented with CSP_ENABLED flag)
-- [ ] Secure file uploads on client (type/size checks) (basic file input present, no validation yet)
+- [x] Secure file uploads on client (type/size checks) (enhanced file input with accept attributes and validation messages)
 
 ## Infra & Monitoring
 
@@ -89,7 +89,7 @@ Legend: [x] done Â· [>] inâ€'progress Â· [ ] pending Â· [~] partial
 
 ### Immediate Next Steps (suggested order)
 
-1) Fix RBAC middleware syntax error in forms.routes.js line 40
+1) ✅ Fix RBAC middleware syntax error in forms.routes.js line 40 (COMPLETED)
 2) Add rate limiting to other POST APIs (form writes, submissions)
 3) Implement password reset flow (token email + change password)
 4) Add export functionality for form submissions (JSON/CSV)
